--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-testing-library": "3.9.2",
+    "husky": "^5.1.2",
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.1",
     "lerna": "^4.0.0",
+    "lint-staged": "^10.5.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "rimraf": "^3.0.2",
