--- a/.eslintrc
+++ b/.eslintrc
@@ -3,19 +3,18 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 10,
-    "project": ["./tsconfig.json"],
+    "project": ["tsconfig.json"],
     "ecmaFeatures": {
       "jsx": true
     }
   },
   "extends": [
-    "plugin:import/recommended",
-    "plugin:import/typescript",
-    "plugin:react-hooks/recommended",
     "airbnb-typescript",
+    "airbnb/hooks",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:jest/recommended",
     "prettier",
-    "prettier/react",
-    "prettier/@typescript-eslint"
+    "plugin:prettier/recommended"
   ],
   "plugins": [
     "react-hooks",
@@ -32,15 +31,7 @@
     "react/prop-types": "off",
     "react/jsx-filename-extension": [
       "error",
-      { "extensions": [".js", ".tsx"] }
+      { "extensions": [".js", ".tsx", ".stories.tsx"] }
     ]
-  },
-  "overrides": [
-    {
-      "files": ["*.ts", "*.tsx"],
-      "parserOptions": {
-        "project": ["./tsconfig.json"]
-      }
-    }
-  ]
+  }
 }
