--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@babel/preset-react": "7.12.10",
     "@babel/preset-typescript": "7.12.7",
     "@babel/runtime": "7.12.5",
-    "@commitlint/cli": "^11.0.0",
+    "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^11.0.0",
     "@commitlint/config-lerna-scopes": "^11.0.0",
     "@storybook/addon-actions": "^6.1.20",
@@ -32,8 +32,8 @@
     "@types/node": "12",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "4.11.1",
-    "@typescript-eslint/parser": "4.11.1",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
     "commitlint-config-jira": "^1.4.1",
@@ -41,12 +41,14 @@
     "concurrently": "^6.0.0",
     "css-loader": "^5.1.0",
     "eslint": "7.17.0",
-    "eslint-config-airbnb-typescript": "12.0.0",
-    "eslint-config-prettier": "7.1.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-config-react": "1.1.7",
     "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "^24.1.5",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "3.3.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-testing-library": "3.9.2",
@@ -55,6 +57,7 @@
     "jest-watch-typeahead": "^0.6.1",
     "lerna": "^4.0.0",
     "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "rimraf": "^3.0.2",
