--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -12,7 +12,7 @@
     "build:esm": "cross-env BABEL_ENV=esm babel src --root-mode upward --extensions .ts,.tsx -d dist/esm --source-maps",
     "build:cjs": "cross-env BABEL_ENV=cjs babel src --root-mode upward --extensions .ts,.tsx -d dist/cjs --source-maps",
     "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist/types",
-    "lint": "eslint src --ext js,ts,jsx,tsx",
+    "lint": "eslint src --ext js,ts,jsx,tsx --fix",
     "clean": "rimraf dist *.tsbuildinfo"
  
   },
