--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@commitlint/config-lerna-scopes": "^11.0.0",
     "@storybook/addon-actions": "^6.1.20",
+    "@storybook/addon-docs": "^6.1.20",
     "@storybook/addon-essentials": "^6.1.20",
     "@storybook/addon-links": "^6.1.20",
+    "@storybook/preset-create-react-app": "^3.1.6",
     "@storybook/react": "^6.1.20",
     "@testing-library/jest-dom": "^5.11.9",
     "@types/jest": "^26.0.20",
@@ -34,6 +36,7 @@
     "@types/react-dom": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
+    "actions": "^1.3.0",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
     "commitlint-config-jira": "^1.4.1",
@@ -65,6 +68,12 @@
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
     "typescript": "~4.2.2"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged"
+    }
   },
   "license": "MIT",
   "private": true,
