--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@efee/app",
+  "name": "@sh/app",
   "version": "0.0.1",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -20,7 +20,7 @@
     "react-dom": ">=17"
   },
   "dependencies": {
-    "@efee/components": "^0.0.1"
+    "@sh/components": "^0.0.1"
   },
   "files": [
     "dist",
@@ -34,6 +34,6 @@
     "access": "public"
   },
   "devDependencies": {
-    "@efee/components": "^0.0.1"
+    "@sh/components": "^0.0.1"
   }
 }
