chore(release): publish
 - @sh/app@0.0.2
 - @sh/components@0.0.2
 - eslint-config-sh@0.0.2

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sh/app",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/types/index.d.ts",
@@ -20,7 +20,7 @@
     "react-dom": ">=17"
   },
   "dependencies": {
-    "@sh/components": "^0.0.1"
+    "@sh/components": "0.0.2"
   },
   "files": [
     "dist",
