making packages public

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -29,7 +29,7 @@
     "!dist/tsconfig.tsbuildinfo"
   ],
   "license": "MIT",
-  "private": true,
+  "private": false,
   "publishConfig": {
     "access": "public"
   },
