--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -26,7 +26,7 @@
   ],
   "license": "MIT",
   "sideEffects": false,
-  "private": true,
+  "private": false,
   "publishConfig": {
     "access": "public"
   }
